# AgentForge

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
config/: providers.example.json
docs/: agent_platform_frontend_redesign_goal.md  agent_run_modes.md  autonomous_agent_platform_goal.md  developer_usage.md  development_handoff.md  harness_agent_platform_expansion_plan.md  multi_agent_autonomous_platform_goal.md  runtime_governance_and_source_design.md  tool_calling_agent_goal.md
src/agentforge/: __init__.py  __main__.py  cli.py
tasksets/: sample_ui_review_basic.json  ui_review_basic.json
tests/: test_agent_harness.py  test_agent_reinforcement_loop.py  test_agent_run_loop.py  test_artifact_schema_and_cleanup.py  test_cli_smoke.py  test_diagnostics.py  test_diff_writer.py  test_hqs_evaluator.py  test_intent_parser.py  test_memory_manager.py  test_model_prompts.py  test_openai_compatible_client.py  test_plan_executor.py  test_planner_v2.py  test_provider_config.py  test_provider_output_contract.py  test_real_provider_tool_calling.py  test_requirement_parser.py  test_response_hqs_evaluator.py  test_rewriter_and_evolution.py  test_run_repository.py  test_skill_generation_flow.py  test_skill_schema.py  test_skill_selector.py  test_skill_writer.py  test_task_loader.py  test_task_router.py  test_taskset_bootstrap.py  test_thinking_modes.py  test_tool_calling_agent.py  test_tool_schema.py  test_version_manager.py  test_web_e2e.py  test_web_fastapi.py  test_web_http_e2e.py  test_web_routes.py  test_web_static_i18n.py  test_workflow_runner.py
(+119 files in other folders)
